Add getters, setters, and toString to SeriesEntity
Implemented getter and setter methods for all fields in SeriesEntity and added a toString override for better object representation. Also updated Principal to use method references and Java 16+ stream API, and improved menu formatting.